# aiconsole

./: .env.template  .gitignore  LICENSE  README.md
backend/: .pre-commit-config.yaml  pyproject.toml
backend/aiconsole/: acceptance_tests.py  app.py  consts.py  init.py
backend/aiconsole/api/: routers.py
backend/aiconsole/api/endpoints/: check_key.py  commands_history.py  execution_modes.py  image.py  net_check.py  profile.py  project_settings.py  registry.py  run_code.py  services.py  settings.py  ws.py
backend/aiconsole/api/utils/: asset_exists.py  asset_get.py  asset_status_change.py  status_change_post_body.py
backend/aiconsole/api/websockets/: client_messages.py  connection_manager.py  do_process_chat.py  handle_incoming_message.py  incoming_message_handler.py  incoming_messages.py  render_materials.py  server_messages.py
backend/aiconsole/base/: singleton.py
backend/aiconsole/core/analysis/: director.py  gpt_analysis_function_step.py
backend/aiconsole/core/assets/: aic_data_context.py  asset.py  assets.py  load_all_assets.py  types.py
backend/aiconsole/core/chat/: apply_mutation.py  chat_listener.py  chat_mutation_messages.py  chat_mutations.py  chat_mutator.py  convert_messages.py  do_process_chat.py  list_possible_historic_chat_ids.py  load_chat_history.py  locations.py  locking.py  printing_chat_listener.py  root.py  save_chat_history.py  types.py  ws_chat_listener.py
backend/aiconsole/core/clients/: gravatar.py
backend/aiconsole/core/code_running/: run_code.py
backend/aiconsole/core/gpt/: check_key.py  consts.py  create_full_prompt_with_materials.py  exceptions.py  function_calls.py  gpt_executor.py  parse_partial_json.py  partial.py  request.py  token_error.py  types.py
backend/aiconsole/core/project/: paths.py  project.py
backend/aiconsole/core/recent_projects/: recent_project.py  recent_projects.py  registry.py  services.py  types.py
backend/aiconsole/core/settings/: models.py  observer.py  project_settings.py  settings.py  settings_notifications.py  settings_storage.py  storage.py
backend/aiconsole/core/users/: gravatar.py  models.py  types.py  user.py
backend/aiconsole/preinstalled/agents/: assistant.toml  automator.toml  bidara.toml  coach.toml  countdown.toml  critic.toml  director.toml  genui.toml  planner.toml  programmer.toml  writer.toml  yoda.toml
backend/aiconsole/preinstalled/materials/: aiconsole.md  aiconsole.toml  aiconsole_settings.py  aiconsole_settings.toml  asana_api._toml  convert_code_to_another_language.py  convert_code_to_another_language.toml  dalle_3_image_generator.py  dalle_3_image_generator.toml  domain_availability.py  domain_availability.toml  environment.py  environment.toml  extract_transcript_from_video.toml  how_to_display_images.toml  how_to_get_weather_information.toml  how_to_install_packages.toml  imessage.toml  list_of_agents.toml  list_of_materials.toml  materials_api._toml  midjourney_v6_prompting_guide.toml  onboarding_agent_guide.toml  pdf_reader_skill.toml  pdf_to_markdown.py  pdf_to_markdown_skill.toml  pdf_to_md.py  read_pdf_as_markdown.py  today.toml  trending_on_github.toml  understanding_materials_meet_toml.toml
backend/aiconsole/tests/: chat_test_framework.py  test_factorial_of_number.py
backend/aiconsole/utils/: BatchingWatchDogHandler.py  cancel_on_disconnect.py  events.py  inter_process.py  list_files_in_file_system.py  resource_to_path.py  serializable_path.py
backend/aiconsole_toolkit/: __init__.py  cli.py  credentials.py  env.py  project.py  settings.py
backend/aiconsole_toolkit/settings/: __init__.py  partial_settings_data.py  settings_data.py
backend/fastmutation/: apply_mutation.py  data_context.py  mutation_context.py  mutation_executor.py  mutations.py  types.py
(+251 files in other folders)
