[tool.poetry]
include = ["aiconsole/static/**/*"]
name = "aiconsole"
version = "0.2.2"
description = "Run and expand your personal AI tools"
authors = ["Maciej Cielecki <maciej.cielecki@10clouds.com>"]
license = "Apache-2.0"
packages = [
    { include = "aiconsole" },
    { include = "aiconsole_toolkit" },
]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.5.1"
watchdog = "^3.0.0"
litellm = "^1.15.10"
fastapi = "^0.103.2"
uvicorn = "^0.25.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
beautifulsoup4 = "^4.12.2"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
pillow = "^10.0.1"
tomlkit = "^0.12.1"
youtube-transcript-api = "^0.6.1"
python-multipart = "^0.0.6"
appdirs = "^1.4.4"
rtoml = "^0.10.0"
send2trash = "^1.8.2"
libgravatar = "^1.0.4"
email-validator = "^2.1.0.post1"
deepmerge = "^1.1.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.1"}
rich = "^13.7.0"
types-requests = "^2.31.0.20240106"
types-setuptools = "^69.0.0.20240106"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
ipdb = "^0.13.13"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[tool.ruff]
line-length = 119

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aiconsole = "aiconsole.init:aiconsole"
dev = "aiconsole.init:aiconsole_dev"

[tool.pytest.ini_options]
python_files = "*_tests.py test_*.py"

[tool.isort]
known_first_party = "aiconsole,aiconsole_toolkit"
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
